# social-robot-nav-tests

./: .gitignore  README.md
fetch_move_base/fetch_move_base_control/config/: fetch_move_base_control.yaml  pepper_move_base_control.yaml
fetch_move_base/fetch_move_base_control/launch/: pepper_move_base_control.launch
fetch_move_base/fetch_move_base_control/scripts/: base_controller.py  tilt_head.py
fetch_move_base/fetch_move_base_mapping/: CMakeLists.txt  package.xml
fetch_move_base/fetch_move_base_mapping/config/: fetch_move_base_mapping.yaml  pepper_move_base_mapping.yaml
fetch_move_base/fetch_move_base_mapping/src/: octomap_pedsim.cpp
fetch_move_base/fetch_move_base_planning/: CMakeLists.txt  package.xml
fetch_move_base/fetch_move_base_planning/config/: fetch_move_base_planning.yaml  pepper_move_base_planning.yaml
fetch_move_base/fetch_move_base_planning/include/: state_cost_objective.h  state_validity_checker_octomap_fcl_R2.h
fetch_move_base/fetch_move_base_planning/launch/: fetch_move_base_planning.launch  pepper_move_base_planning.launch
fetch_move_base/fetch_move_base_planning/src/: planning_framework_main.cpp  state_cost_objective.cpp  state_validity_checker_octomap_fcl_R2.cpp
pepper_move_base/: README.md
pepper_move_base/pepper_move_base_msgs/: CMakeLists.txt
pepper_move_base/pepper_move_base_planning/: CMakeLists.txt
pepper_move_base/pepper_move_base_planning/include/: state_validity_checker_octomap_fcl_R2.h
pepper_move_base/pepper_move_base_planning/src/: state_validity_checker_octomap_fcl_R2.cpp
pepper_nav_ws/src/pepper_pipeline/: CMakeLists.txt  package.xml
pepper_pipeline/: CMakeLists.txt  package.xml
pepper_pipeline/config/: d435_pointcloud.yaml
pepper_pipeline/include/: mbf_client.h
pepper_pipeline/launch/: agent_sim.launch  full.launch  octomap_launcher.launch  only_pepper_urdf.launch  planner_drive.launch  pointcloud_filter.launch  psmm_drive.launch  psmm_test.launch  sfm_drive.launch  sfm_tests.launch  social_nav_test.launch  social_rrt_tests.launch
pepper_pipeline/map/: offline_map_3.bt
pepper_pipeline/param/: costmap_common_params.yaml  dwa_local_planner.yaml  eband_local_planner.yaml  move_base_flex.yaml
pepper_pipeline/results/: results_tables.ods
pepper_pipeline/results/rrt/: 07_02_case1.csv  07_02_case1_rrt.csv  09_02_case2_rrt.csv
pepper_pipeline/results/sfm/: 01_02_case1.csv  01_02_case1_laptop2.csv  03_02_case2_50.csv  03_02_case3_27.csv  07_02_case2_22.csv  07_02_case2_22_old.csv  07_02_case2_22laptop2.csv  09_02_case2_22laptop2.csv  dummy.csv
pepper_pipeline/results/social_rrt/: 01_02_case1.csv  02_02_case1.csv  02_02_case1_laptop2.csv  02_02_case1_social_rrt.csv  03_02_case2.csv  03_02_case2_laptop2.csv  03_02_case2_social_rrt.csv  10_02_case1_laptop2.csv  11_02_case1_social_rrt.csv
pepper_pipeline/rviz/: default.rviz
pepper_pipeline/scenarios/: ipa_apartment.xml
pepper_pipeline/scripts/: metrics_recorder.py  psmm_requester.py  sfm_requester.py  sfm_tests_launcher.py  social_rrt_metrics_recorder.py  social_rrt_requester.py  social_rrt_tests_launcher.py  tests_launcher.py  tests_maker.sh
pepper_pipeline/src/: collision_counter.cpp  mbf_client.cpp  odom_publisher.cpp
pepper_social_nav_tests/: CMakeLists.txt  package.xml
pepper_social_nav_tests/include/: mbf_client.h
pepper_social_nav_tests/launch/: agent_sim.launch  esc_nav_stack_test.launch  full.launch  pointcloud_filter.launch  psmm_drive.launch  psmm_test.launch  sfm_tests.launch  social_nav_test.launch  social_rrt_tests.launch
pepper_social_nav_tests/map/: map_laser_octomap.bt  offline_complete_map.bt
pepper_social_nav_tests/results/: results_tables.ods
pepper_social_nav_tests/results/sfm/: 09_02_case2_22laptop2_dummy.csv
pepper_social_nav_tests/results/social_rrt/: 02_02_case1_laptop2.csv  02_02_case1_social_rrt.csv  10_02_case1_social_rrt_laptop2.csv
pepper_social_nav_tests/rviz/: default.rviz
pepper_social_nav_tests/scripts/: esc_nav_stack_metrics_recorder.py  esc_nav_stack_requester.py  esc_nav_stack_tests_launcher.py  psmm_requester.py  sfm_metrics_recorder.py  sfm_tests_launcher.py  social_rrt_requester.py  social_rrt_tests_launcher.py  tests_maker.sh
pepper_social_nav_tests/src/: collision_counter.cpp  mbf_client.cpp
real_pepper_pipeline/: CMakeLists.txt  package.xml
real_pepper_pipeline/config/: pepper_move_base_control.yaml  pepper_move_base_mapping.yaml  pepper_move_base_planning.yaml  pozyx_bridge_config.yaml  real_pepper.rviz
real_pepper_pipeline/launch/: JulietteY20MP_moveit_controller_manager.launch.xml  JulietteY20MP_moveit_sensor_manager.launch.xml  hololens_bridge.launch  move_group.launch  moveit_planner.launch  octomap_node.launch  ped_visualizer.launch  pepper_bringup.launch  pepper_control_trajectory.launch  pepper_full.launch  pepper_full_py.launch  pepper_publisher.launch  planner_drive.launch  pozyx_bridge.launch  real_pepper_full.launch  real_pepper_full_py.launch  sensor_manager.launch.xml  social_demo.launch  trajectory_execution.launch.xml
real_pepper_pipeline/map/: robot_lab.bt  robot_lab.ot  robot_lab3.bt  robot_lab_open.bt  robot_lab_tables_moved.bt
real_pepper_pipeline/rviz/: real_pepper.rviz
real_pepper_pipeline/scripts/: hololens_localizer.py  uwb_ped_bridge.py
real_pepper_social_nav_tests/: CMakeLists.txt  package.xml
real_pepper_social_nav_tests/config/: pepper_trajectory_control.yaml
real_pepper_social_nav_tests/config/esc_nav_stack/: esc_move_base_mapping.yaml  (+1 more)
real_pepper_social_nav_tests/launch/: JulietteY20MP_moveit_controller_manager.launch.xml  hololens_bridge.launch  move_group.launch  moveit_planner.launch  octomap_node.launch  pc_converter.launch  ped_visualizer.launch  pepper_bringup.launch  pepper_control_trajectory.launch  pepper_full.launch  pepper_publisher.launch  pepper_upload.launch  planner_drive.launch  planning_context.launch  pozyx_bridge.launch  real_pepper_full.launch  real_pepper_full_py.launch  sensor_manager.launch.xml  social_demo.launch  trajectory_execution.launch.xml
real_pepper_social_nav_tests/map/: robot_lab2.bt
(+26 files in other folders)
