<?xml version="1.0"?>
<package format="3">
  <name>pepper_social_nav_tests</name>
  <version>0.0.0</version>
  <description>The pepper_social_nav_tests package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sasm@todo.todo">sasm</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>mbf_msgs</build_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>mbf_msgs</build_export_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>mbf_msgs</exec_depend> -->

  <depend>roslib</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <!-- <depend>mbf_msgs</depend> -->


  <!-- tf/tf2 -->
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- msgs -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pedsim_ros</depend>

  <!-- Pepper -->
  <depend>esc_move_base_msgs</depend>
  <depend>esc_move_base_control</depend>
  <depend>esc_move_base_mapping</depend>

  <build_depend condition="$ROS_DISTRO != noetic">libfcl-dev</build_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">libfcl-dev</exec_depend>
  <build_depend condition="$ROS_DISTRO == noetic">fcl</build_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">fcl</exec_depend>

  <!-- pcd -->
  <depend>ros_pcdfilter</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>